--- a/css/form.css
+++ b/css/form.css
@@ -124,7 +124,14 @@ header .wrapper nav {
   flex-direction: column;
   justify-content: start;
   gap: 20px;
+} 
+#buynow-form .wrapper .form-container .payment-info .payment-section label{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
+
 #buynow-form .wrapper .form-container .payment-info .payment-section .nobalance{
   display: flex;
   flex-direction: column;
@@ -165,6 +172,9 @@ color: var(--primary-yellow);
   cursor: pointer;
   font-size: var(--fs-12);
 }
+#buynow-form .wrapper .form-container .payment-info .payment-section .apply:hover{
+  background-color: #ffe270;
+}
 #buynow-form .wrapper .form-container .payment-info .payment-section .card-icons{
   padding-left: 30px;
   display: flex;
@@ -176,18 +186,39 @@ color: var(--primary-yellow);
 }
 #buynow-form .wrapper .form-container .payment-info .payment-section .info{
   padding-left: 30px;
+  font-size: var(--fs-14);
+}
+input[type="radio"] {
+  width: 20px;
+  height: 20px;
+  border: 2px solid #333;
+  border-radius: 50%;
+  cursor: pointer;
+}
+input[type="radio"]:checked {
+  color: var(--primary-yellow);
 }
 #buynow-form .wrapper .form-container .proceed{
-  width: 20%;
+  width: 15%;
+}
+#code_err{
+  order: 2;
 }
 span{
     color: red;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
     font-size: var(--fs-14);
 }
 span>i{
     color: green;
     font-size: var(--fs-14);
+}
+.sub-head{
+  color: var(--primary-yellow);
+}
+.sub-head-two{
+  font-size: var(--fs-20 );
+  font-weight: 400;
 }
 
 @media (max-width: 1024px) {
