--- a/css/productTwo.css
+++ b/css/productTwo.css
@@ -1,6 +1,122 @@
+header{
+    width: 100%;
+    height: 30vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header .wrapper {
+    width: 100%;
+    height: 100%;
+    
+}
+
+header .wrapper nav {
+    width: 100%;
+    height: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--teritory-black);
+
+}
+
+header .wrapper nav .nav-wrap {
+    width: 90%;
+    height: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+header .wrapper nav .nav-wrap .menu_icon {
+    display: none;
+}
+
+header .wrapper nav .nav-wrap input {
+    display: none;
+}
+
+header .wrapper nav .nav-wrap ul {
+    width: 40%;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+header .wrapper nav .nav-wrap ul li {
+    list-style: none;
+}
+
+header .wrapper nav .nav-wrap ul li a {
+    text-decoration: none;
+    color: white;
+}
+
+header .wrapper nav .nav-wrap ul li a .home {
+    border-bottom: 2px solid var(--primary-yellow);
+    color: var(--primary-yellow);
+}
+header .wrapper nav .nav-wrap .icon{
+    width: 5%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    font-size: var(--fs-24);
+}
+header .wrapper .banner-slider{
+    width: 100%;
+    height: 20vh;
+    background-color: var(--secondary-blue);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+header .wrapper .banner-slider .wrapper{
+     width: 90%;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+header .wrapper .banner-slider .banner-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+}
+header .wrapper .banner-slider h2{
+    font-size: var(--fs-32);
+    color: white;
+    font-weight: 400;
+    text-align: center;
+}
+header .wrapper .banner-slider h2 span{
+    font-weight: 600;
+}
+header .wrapper .banner-slider a{
+    text-decoration: none;
+    color: white;
+}
+header .wrapper .banner-slider .shop-link{
+    font-size: var(--fs-16);
+    font-weight: 600;
+
+}
+header .wrapper .banner-slider .arrow{
+    background-color: transparent;
+    color: white;
+    border: none;
+    font-size: 24px;
+}
 #details{
     width: 100%;
-    height: 145vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,15 +127,15 @@
     height: 90%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
 }
 #details .wrapper .left{
-    width: 60%;
+    width: 40%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
-    /* align-items: center; */
+    /* justify-content: center;
+    align-items: center; */
 }
 #details .wrapper .left .big-image{
     width: 90%;
@@ -37,7 +153,7 @@
     gap: 10px;
 }
 #details .wrapper .right{
-    width: 40%;
+    width: 60%;
     height: 100%;
 }
 #details .wrapper .right .product-right{
@@ -57,11 +173,11 @@
     
 }
 #details .wrapper .right .product-right .header h2{
-    font-size: var(--fs-36);
+    font-size: var(--fs-28);
     font-weight: 500;
 }
 #details .wrapper .right .product-right .header p{
-    font-size: var(--fs-24);
+    font-size: var(--fs-20);
     font-weight: 500;
     color: var(--card-grey);
 }
@@ -70,6 +186,7 @@
     background-color: transparent;
     font-size: var(--fs-24);
 }
+
 #details .wrapper .right .product-right .desc{
     width: 100%;
     height: 20%;
@@ -78,7 +195,7 @@
     gap: 10px;
 }
 #details .wrapper .right .product-right .desc h3{
-    font-size: var(--fs-28);
+    font-size: var(--fs-24);
     font-weight: 600;
 }
 #details .wrapper .right .product-right .desc p{
@@ -96,48 +213,57 @@
 }
 #details .wrapper .right .product-right .rating span{
     color: black;
+    font-size: var(--fs-14);
 }
 #details .wrapper .right .product-right .color-options{
-    width: 100%;
-    height: 15%;
+    width: 30%;
+    background-color: #444;
     display: flex;
     align-items: center;
     gap: 10px;
 }
-#details .wrapper .right .product-right .size-section{
-    width: 100%;
-    height: 35%;
-    display: flex;
-    flex-direction: column;
+#details .wrapper .right .product-right .color-options img{
+    width: 50%;
+    height: 50%;
 }
-#details .wrapper .right .product-right .size-section p{
-    font-size: var(--fs-20);
-    font-weight: 500;
+.sizes{
+    width: 85%;
 }
-#details .wrapper .right .product-right .size-section .sizes{
-    width: 100%;
-    height: 90%;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    align-content: center;
-    justify-content: start ;
+.sizes label {
+    display: inline-block;
+    margin: 5px;
+    cursor: pointer;
 }
-#details .wrapper .right .product-right .size-section .sizes button{
-    width: 20%;
-    height: 20%;
-    padding: 20px;
+
+.sizes input[type="radio"] {
+    display: none; /* hide the actual radio */
+}
+
+.sizes span {
+    width: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
-border: 0.5px solid #B9B5B5;
-border-radius: 3px;
- font-size: var(--fs-20);
- font-weight: 500;
- cursor: pointer;
+    padding: 10px 15px;
+    border: 2px solid #ddd;
+    border-radius: 5px;
+    font-size: 14px;
+    transition: all 0.3s ease;
 }
+
+.sizes input[type="radio"]:checked + span {
+    border-color: #f4c430; /* yellow border */
+    /* background-color: #f4c430; */
+    /* color: white; */
+    font-weight: bold;
+}
+
+.sizes span:hover {
+    border-color: #999;
+}
+
 #details .wrapper .right .product-right .price{
-    font-size: var(--fs-30);
+    font-size: var(--fs-20);
     font-weight: 700;
 }
 #details .wrapper .right .product-right a .add-to-cart{
@@ -164,7 +290,7 @@ border-radius: 3px;
     top: 600px;
 }
 #modal .wrapper{
-    width: 90%;
+    width: 50%;
     height: 90%;
     display: flex;
     justify-content: center;
@@ -172,19 +298,19 @@ border-radius: 3px;
 }
 .checkout-card {
   width: 100%;
-  background: white;
-  padding: 30px;
+  background: rgb(255, 255, 255);
+  padding: 10px;
   border-radius: 8px;
   position: relative;
   font-family: 'Segoe UI', sans-serif;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .close-btn {
   position: absolute;
   top: 20px;
   right: 20px;
-  font-size: 20px;
+  font-size: var(--fs-20);
   cursor: pointer;
   color: red;
 }
@@ -207,22 +333,23 @@ border-radius: 3px;
 
 .product-details h2 {
   margin: 0;
-  font-size: 22px;
+  font-size: var(--fs-20);
 }
 
 .product-details h3 {
   margin-top: 15px;
-  font-size: 16px;
+  font-size: var(--fs-16);
   color: #1f2b41;
 }
 
 .product-details p {
+    font-size: var(--fs-14);
   margin: 8px 0;
   color: #444;
 }
 
 .price-and-qty {
-  margin-top: 20px;
+  /* margin-top: 20px; */
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
@@ -230,7 +357,7 @@ border-radius: 3px;
 
 .quantity label {
   font-weight: bold;
-  font-size: 14px;
+  font-size: var(--fs-14);
 }
 
 .qty-box {
@@ -248,7 +375,7 @@ border-radius: 3px;
   background: none;
   border: none;
   color: white;
-  font-size: 16px;
+  font-size: var(--fs-16);
   cursor: pointer;
 }
 
@@ -257,7 +384,7 @@ border-radius: 3px;
 }
 
 .order-summary h3 {
-  font-size: 16px;
+  font-size: var(--fs-16);
   font-weight: bold;
 }
 
@@ -267,11 +394,13 @@ border-radius: 3px;
   margin: 8px 0;
   color: #333;
 }
-
+.font{
+    font-size: var(--fs-14);
+}
 .summary-total {
   display: flex;
   justify-content: space-between;
-  font-size: 18px;
+  font-size: var(--fs-18);
   font-weight: bold;
   margin: 15px 0;
 }
