--- a/css/productTwo.css
+++ b/css/productTwo.css
@@ -1,6 +1,6 @@
 header{
     width: 100%;
-    height: 30vh;
+    height: 10vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,7 +14,7 @@ header .wrapper {
 
 header .wrapper nav {
     width: 100%;
-    height: 10vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -61,7 +61,7 @@ header .wrapper nav .nav-wrap ul li a .home {
     color: var(--primary-yellow);
 }
 header .wrapper nav .nav-wrap .icon{
-    width: 5%;
+    width: 6%;
     height: 100%;
     display: flex;
     justify-content: space-between;
@@ -357,7 +357,7 @@ header .wrapper .banner-slider .arrow{
 .product-details h3 {
   margin-top: 15px;
   font-size: var(--fs-16);
-  color: #1f2b41;
+  font-weight: 500;
 }
 
 .product-details p {
@@ -945,18 +945,17 @@ hr {
 /* Mobile Small (320px to 374px) */
 @media screen and (max-width: 374px) and (min-width: 320px) {
     :root {
-        --fs-96: 32px;
-        --fs-70: 28px;
-        --fs-60: 24px;
-        --fs-40: 20px;
-        --fs-36: 18px;
-        --fs-32: 16px;
-        --fs-30: 16px;
-        --fs-28: 14px;
-        --fs-26: 14px;
-        --fs-20: 14px;
-        --fs-16: 13px;
-        --fs-14: 12px;
+ 
+        --fs-96: 44px;
+        --fs-70: 40px;
+        --fs-60: 38px;
+        --fs-40: 28px;
+        --fs-32: 24px;
+        --fs-28: 24px;
+        --fs-26: 20px;
+        --fs-20: 18px;
+        --fs-18: 16px;
+        --fs-16: 14px;
     }
     
     #details {
@@ -1015,8 +1014,8 @@ hr {
     }
     
     #details .wrapper .right .product-right .color-options img {
-        width: 30px;
-        height: 30px;
+        width: 50px;
+        height: 50px;
     }
         #modal {
             height: auto;
