--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ header .wrapper nav .nav-wrap ul li a .home {
 }
 
 header .wrapper nav .nav-wrap .icon {
-    width: 5%;
+    width: 6%;
     height: 100%;
     display: flex;
     justify-content: space-between;
@@ -523,6 +523,7 @@ header .wrapper #banner .carousel.active {
 
 #featured-categories .wrapper .cards .product .content .details h4 {
     font-size: var(--fs-16);
+    text-align: center;
     color: var(--primary-yellow);
     font-weight: 300;
 }
@@ -677,6 +678,7 @@ footer .footer-wrapper .first-half .footer-section li {
 }
 
 footer .footer-wrapper .first-half .footer-section a {
+    font-size: var(--fs-14);
     text-decoration: none;
     color: white;
 }
@@ -685,6 +687,7 @@ footer .footer-wrapper .first-half .footer-section h2 {
     font-size: var(--fs-18);
     font-weight: 700;
     color: var(--primary-yellow);
+    
 }
 
 footer .footer-wrapper .first-half .footer-section p {
@@ -841,8 +844,10 @@ footer .footer-wrapper .footer-bottom a {
         --fs-70: 60px;
         --fs-60: 50px;
         --fs-40: 36px;
-        --fs-20: 16px;
-        --fs-16: 12px;
+        --fs-20: 18px;
+        --fs-18: 16px;
+        --fs-16: 14px;
+        --fs-14: 12px;
     }
 
     header .wrapper #banner .carousel .contentOne {
@@ -901,6 +906,7 @@ footer .footer-wrapper .footer-bottom a {
         height: auto;
         padding: 8px 0px;
     }
+
 }
 
 /* Tablet Landscape (768px to 1023px) */
@@ -1062,10 +1068,18 @@ footer .footer-wrapper .footer-bottom a {
         justify-content: center;
         align-items: center;
     }
+        
+footer .footer-wrapper .first-half .footer-section p {
+    text-align: center;
+}
+footer .footer-wrapper .first-half .footer-section ul {
+    text-align: center;
+}
+
 }
 
 /* Tablet (481px to 767px) */
-@media screen and (min-width: 481px) and (max-width: 767px) {
+@media screen and (min-width: 481px) and (max-width: 769px) {
     :root {
         --fs-96: 48px;
         --fs-70: 40px;
@@ -1073,12 +1087,24 @@ footer .footer-wrapper .footer-bottom a {
         --fs-40: 28px;
         --fs-28: 20px;
         --fs-26: 18px;
-        --fs-20: 16px;
-        --fs-18: 50px;
-        --fs-16: 12px;
+        --fs-20: 14px;
+        --fs-18: 14px;
+        --fs-16: 14px;
         --fs-14: 14px;
     }
-
+    header {
+        width: 100%;
+        height: 80vh;
+        background-color: #FACC15;
+    }
+    header .wrapper{
+        width: 100%;
+        height: 100%;
+    }
+    header .wrapper nav {
+        width: 100%;
+        height: 15%;
+    }
     header .wrapper nav .nav-wrap ul {
         position: absolute;
         top: 60px;
@@ -1120,14 +1146,29 @@ footer .footer-wrapper .footer-bottom a {
     header .wrapper nav .nav-wrap ul li a {
         font-size: 18px;
     } 
+    header .wrapper #banner {
+        width: 100%;
+        height: 80%;
+    /* background-color: #e73370; */
+    }
+    header .wrapper #banner .carousel {
+        width: 100%;
+        height: 80%;
+        background-color: #6C6767;
+    }
+    header .wrapper #banner .carousel .image {
+        width: 100%;
+        /* height: 90%; */
+    }
     header .wrapper #banner .carousel .contentOne a {
         width: 40%;
 
     }
+
     header .wrapper #banner .carousel .contentOne {
-        left: 50px;
-        top: 100px;
-        width: 70%;
+        left: 90px;
+        top: 40px;
+        width: 60%;
     }
 
     header .wrapper #banner .carousel .contentOne h2 {
@@ -1219,6 +1260,9 @@ footer .footer-wrapper .footer-bottom a {
         height: auto;
         padding: 30px 0px;
     }
+        footer .footer-wrapper{
+        gap: 20px;
+    }
 
     footer .footer-wrapper .first-half {
         flex-direction: column;
@@ -1231,22 +1275,33 @@ footer .footer-wrapper .footer-bottom a {
         justify-content: center;
         align-items: center;
     }
+footer .footer-wrapper .first-half .footer-section a {
+    font-size: var(--fs-16);
+}
 }
 
 /* Mobile Large (375px to 480px) */
 @media screen and (max-width: 480px) and (min-width: 375px) {
     :root {
-        --fs-96: 36px;
-        --fs-70: 32px;
-        --fs-60: 28px;
-        --fs-40: 24px;
-        --fs-28: 18px;
-        --fs-26: 16px;
-        --fs-20: 14px;
-        --fs-18: 12px;
-        --fs-16: 10px;
+        --fs-96: 44px;
+        --fs-70: 40px;
+        --fs-60: 38px;
+        --fs-40: 34px;
+        --fs-32: 28px;
+        --fs-28: 24px;
+        --fs-26: 24px;
+        --fs-20: 20px;
+        --fs-18: 18px;
+        --fs-16: 14px;
     }
-
+    header {
+    width: 100%;
+    height: 50vh;
+    }
+header .wrapper nav {
+    width: 100%;
+    height: 10vh;
+}
     header .wrapper nav .nav-wrap {
         padding: 10px 0;
     }
@@ -1303,16 +1358,24 @@ footer .footer-wrapper .footer-bottom a {
     }
     header .wrapper #banner .carousel .contentFour a {
     width: 40%;
-}
+    }
+    header .wrapper #banner .carousel .image {
+    width: 100%;
+    height: 50%;
+    }
+
     header .wrapper #banner .carousel .contentOne {
-        left: 20px;
-        top: 80px;
-        width: 80%;
+        left: 90px;
+        top: 40px;
+        width: 60%;
     }
 
     header .wrapper #banner .carousel .contentOne h2 {
         left: 20px;
         top: 30px;
+    }
+    header .wrapper #banner .carousel .contentOne p {
+        font-size: var(--fs-18);
     }
 
     header .wrapper #banner .carousel .contentTwo {
@@ -1404,6 +1467,9 @@ footer .footer-wrapper .footer-bottom a {
         height: auto;
         padding: 30px 0px;
     }
+        footer .footer-wrapper{
+        gap: 20px;
+    }
 
     footer .footer-wrapper .first-half {
         flex-direction: column;
@@ -1421,15 +1487,15 @@ footer .footer-wrapper .footer-bottom a {
 /* Mobile Small (320px to 374px) */
 @media screen and (max-width: 375px) and (min-width: 320px) {
     :root {
-        --fs-96: 32px;
-        --fs-70: 28px;
-        --fs-60: 24px;
-        --fs-40: 20px;
-        --fs-28: 16px;
-        --fs-26: 14px;
-        --fs-20: 12px;
-        --fs-18: 10px;
-        --fs-16: 8px;
+        --fs-96: 40px;
+        --fs-70: 38px;
+        --fs-60: 34px;
+        --fs-40: 28px;
+        --fs-28: 24px;
+        --fs-26: 20px;
+        --fs-20: 18px;
+        --fs-18: 16px;
+        --fs-16: 14px;
     }
 
     header .wrapper nav .nav-wrap {
@@ -1590,7 +1656,9 @@ footer .footer-wrapper .footer-bottom a {
         height: auto;
         padding: 30px 0px;
     }
-
+    footer .footer-wrapper{
+        gap: 20px;
+    }
     footer .footer-wrapper .first-half {
         flex-direction: column;
         gap: 20px;
