--- a/css/style.css
+++ b/css/style.css
@@ -1092,20 +1092,7 @@ footer .footer-wrapper .first-half .footer-section ul {
         --fs-16: 14px;
         --fs-14: 14px;
     }
-    header {
-        width: 100%;
-        height: 80vh;
-        background-color: #FACC15;
-    }
-    header .wrapper{
-        width: 100%;
-        height: 100%;
-    }
-    header .wrapper nav {
-        width: 100%;
-        height: 15%;
-    }
-    header .wrapper nav .nav-wrap ul {
+     header .wrapper nav .nav-wrap ul {
         position: absolute;
         top: 60px;
         left: 0;
@@ -1146,29 +1133,24 @@ footer .footer-wrapper .first-half .footer-section ul {
     header .wrapper nav .nav-wrap ul li a {
         font-size: 18px;
     } 
-    header .wrapper #banner {
-        width: 100%;
-        height: 80%;
-    /* background-color: #e73370; */
+    header .wrapper #banner{
+        height: auto;
     }
     header .wrapper #banner .carousel {
-        width: 100%;
-        height: 80%;
-        background-color: #6C6767;
+        /* height: ; */
     }
     header .wrapper #banner .carousel .image {
-        width: 100%;
-        /* height: 90%; */
-    }
+    width: 100%;
+    height: 90%;
+}
     header .wrapper #banner .carousel .contentOne a {
         width: 40%;
 
     }
-
     header .wrapper #banner .carousel .contentOne {
-        left: 90px;
-        top: 40px;
-        width: 60%;
+        left: 50px;
+        top: 100px;
+        width: 70%;
     }
 
     header .wrapper #banner .carousel .contentOne h2 {
@@ -1214,8 +1196,8 @@ footer .footer-wrapper .first-half .footer-section ul {
     }
 
     #featured-categories .wrapper .navs {
-        width: 80%;
-        flex-direction: column;
+        width: auto;
+        /* flex-direction: column; */
         height: auto;
         gap: 10px;
     }
@@ -1294,14 +1276,7 @@ footer .footer-wrapper .first-half .footer-section a {
         --fs-18: 18px;
         --fs-16: 14px;
     }
-    header {
-    width: 100%;
-    height: 50vh;
-    }
-header .wrapper nav {
-    width: 100%;
-    height: 10vh;
-}
+
     header .wrapper nav .nav-wrap {
         padding: 10px 0;
     }
@@ -1358,24 +1333,16 @@ header .wrapper nav {
     }
     header .wrapper #banner .carousel .contentFour a {
     width: 40%;
-    }
-    header .wrapper #banner .carousel .image {
-    width: 100%;
-    height: 50%;
-    }
-
+}
     header .wrapper #banner .carousel .contentOne {
-        left: 90px;
-        top: 40px;
-        width: 60%;
+        left: 20px;
+        top: 80px;
+        width: 80%;
     }
 
     header .wrapper #banner .carousel .contentOne h2 {
         left: 20px;
         top: 30px;
-    }
-    header .wrapper #banner .carousel .contentOne p {
-        font-size: var(--fs-18);
     }
 
     header .wrapper #banner .carousel .contentTwo {
@@ -1416,8 +1383,8 @@ header .wrapper nav {
     }
 
     #featured-categories .wrapper .navs {
-        width: 90%;
-        flex-direction: column;
+        width: auto;
+        /* flex-direction: column; */
         height: auto;
         gap: 8px;
         padding: 8px;
@@ -1605,11 +1572,11 @@ header .wrapper nav {
     }
 
     #featured-categories .wrapper .navs {
-        width: 95%;
-        flex-direction: column;
+        width: auto;
+        /* flex-direction: column; */
         height: auto;
         gap: 6px;
-        padding: 6px;
+        padding: 7px;
     }
 
     #featured-categories .wrapper .navs a h1 {
