--- a/css/about.css
+++ b/css/about.css
@@ -152,30 +152,34 @@ header .wrapper nav {
 }
 
 /* contact */
-#contact-section {
+#contact_us {
   width: 100%;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: var(--secondary-blue);
 }
 
+#contact_us h2 {
+  color: var(--primary-yellow);
+  font-size: var(--fs-32);
+  margin-top: 15px;
+  text-align: start;
+  width: 90%;
+}
 .container {
   width: 90%;
   height: 90%;
   display: flex;
+  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
   gap: 40px;
 }
 .contact-details{
   width: 60%;
-}
-.contact-details h2 {
-  color: var(--primary-yellow);
-  font-size: var(--fs-32);
-  margin-bottom: 15px;
 }
 
 .intro {
@@ -254,7 +258,7 @@ header .wrapper nav {
   #story .wrapper .accordion .name {
     padding: 35px 10px;
   }
-    #contact-section{
+    #contact_us{
      height: auto;
     padding: 20px 0px;
   }
@@ -288,7 +292,7 @@ header .wrapper nav {
   #story .wrapper .accordion .name {
     padding: 30px 10px;
   }
-    #contact-section{
+    #contact_us{
      height: auto;
     padding: 20px 0px;
   }
@@ -325,7 +329,7 @@ header .wrapper nav {
   #story .wrapper .accordion .name {
     padding: 25px 10px;
   }
-    #contact-section{
+    #contact_us{
      height: auto;
     padding: 20px 0px;
   }
@@ -364,10 +368,13 @@ header .wrapper nav {
   #story .wrapper .accordion .name {
     padding: 20px 10px;
   }
-    #contact-section{
-     height: auto;
-    padding: 20px 0px;
-  }
+    #contact_us{
+      height: auto;
+      padding: 20px 0px;
+    }
+    #contact_us h2 {
+      text-align: center;
+    }
   .container {
     flex-direction: column;
     gap: 20px;
@@ -424,17 +431,20 @@ header .wrapper nav {
   #story .wrapper .accordion .name {
     padding: 15px 10px;
   }
-    #contact-section{
+    #contact_us{
      height: auto;
     padding: 20px 0px;
   }
   .container {
     padding: 30px 0;
   }
-  
+  .contact-details{
+    order: 2;
+  }
   .contact-right {
     width: 90%;
     height: 400px;
+    
   }
   
   #story .wrapper .accordion {
@@ -468,7 +478,7 @@ header .wrapper nav {
     padding: 12px 8px;
   }
 
-    #contact-section{
+    #contact_us{
      height: auto;
     padding: 20px 0px;
   }
@@ -514,7 +524,7 @@ header .wrapper nav {
   #story .wrapper .accordion .name {
     padding: 10px 6px;
   }
-  #contact-section{
+  #contact_us{
      height: auto;
     padding: 20px 0px;
   }
